Revision history for Perl extension CGI::Application::Plugin::Authentication.

????
    - unit tests now skip tests where optional modules are not installed
      (gtermars@cpan.org)

0.12

    Bug Fixes
    - when issuing a redirect, remember to set header_type to 'redirect'
      (reported by Graham TerMarsch)

    Other updates
    - Fix inconsistency in doc example (reported by POLETTIX)

0.11  Wed Jul 26 11:16:12 EDT 2006

    - suppress warning about missing Color::Calc unless the user is actually
      trying to use it (reported by Ron Savage)
    - explicitly load CGI.pm since some users may be using CGI::Simple
      (reported by Ron Savage)
    - Fixed bug in Cookie store where the expiry time of the cookie was ignored
      (patch by POLETTIX)

0.10  Thu May 18 22:59:56 EDT 2006

    - Add support for Authen::Simple (all Authen::Simple modules can
      be used directly as Drivers)
    - Made the login page much more customizable:
      - change any of the text
      - customize the colours - provide one base colour and lighter and
        darker shades are automatically generated (requires Color::Calc)
      - offer to remember the users username in a cookie for the next
        time they login
      - add option for a 'forgotten password' URL
      - add option for a 'register new account' URL
      - add option to supress the stylesheet so you can provide your own

0.09  Thu Jan 26 20:56:29 EST 2006

    API Changes
    - Added option to provide your own HTML for the login box through a callback
      (Shawn Sorichetti)
    - Added POST_LOGIN_RUNMODE callback (Shawn Sorichetti)

0.08  Wed Nov 23 20:20:24 EST 2005

    API Changes
    - Removed ability to configure the DBI driver with a DSN and
      username/password.  CGI::Application::Plugin::DBH should be used for
      that instead (Mark Stosberg) 
    - DBI driver defaults to $self->dbh() if DBH not provided (Mark Stosberg)

    Bug Fixes