@@ -12,7 +12,6 @@ WriteMakefile
                            'Digest::SHA1' => '0',
                            'MIME::Base64' => '0',
                            'Scalar::Util' => '0',
-                           'Test::Exception' => '0',
                            'Test::More' => '0',
                            'Test::Warn' => '0',
                            'UNIVERSAL::require' => '0'
